# kafka_app0

./: pyproject.toml
app/: consumer0.py  consumer0_notify.py  consumer1_analytics.py  data_processing.py  docker-compose.yml  email_notify.py  producer0.py
